tests/NormalTests/paczka1/fuzzy1/34842521.err
Error in line 2: AJAdMgbTvC A25 7,0
Error in line 3: AJAdMgbTvC S507 82,1
Error in line 5: pg8Kkx A25 50,9
Error in line 26: S507 A25 84,5
Error in line 28: AJAdMgbTvC S507 30,0
Error in line 34: AJAdMgbTvC A25 P,4
Error in line 27: S507 A278 43,1
